--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,54 @@
-<p>progress works!</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+        <h4 class="card-title"> Barra progreso</h4>
+      <div class="card-body">
+        <div class="progress">
+          <div 
+            class="progress-bar progress-bar-striped progress-bar-animated"
+            role="progressbar"
+            [attr.ariaValuenow] = "porciento"
+            aria-valuenow="50"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            [style.width]="porciento + '%'"
+            style="width: 50%"
+          ></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+        <div class="col-6">
+          <div class="card">
+            
+            <div class="card-body">
+                <div class="input-group">
+                    <span class="input-group-btn">
+                    <button class="btn btn-secondary" type="button" (click)="cambiarPorciento(-5)">
+                            <i class="fas fa-minus"></i>
+
+                    </button>    
+                </span>
+                <input type="text" class="form-control" name="porciento" [(ngModel)]="porciento">
+                <span class="input-group-btn">
+                    <button class="btn btn-secondary" type="button" (click)="cambiarPorciento(+5)">
+                            <i class="fas fa-plus"></i>
+                    </button>
+                </span>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+                <div class="card">
+                  
+                  <div class="card-body">
+                          texto 1
+                      </div>
+                  </div>
+              </div>
+    </div>
